install_data(
    meson.project_name() + '.plugins.devices.kettle.redmond.rk_g2xx.gschema.xml',
    install_dir: join_paths(get_option('prefix'), get_option('datadir'), 'glib-2.0', 'schemas')
)

rk_g2xx_icons = gnome.compile_resources(
    'rk_g2xx_icons',
    'icons/icons.gresource.xml',
    source_dir: 'icons'
)
